--- a/ansible-checmk-mapping.yml
+++ b/ansible-checmk-mapping.yml
@@ -2,6 +2,13 @@
   become: yes
   gather_facts: false
   tasks:
+   - name: Copy agent file
+     copy:
+       src: /tmp/check_mk_agent
+       dest: /usr/bin/
+       owner: root
+       group: root
+       mode: '0755'
    - name: Change IP mapping to checkmk server
      copy:
        src: /tmp/check_mk
@@ -9,7 +16,7 @@
        owner: root
        group: root
        mode: '0644'
-       
+     notify: restart checkmk
   handlers:
    - name: restart checkmk
      service:
